# agent-spec

./: Cargo.toml  LICENSE  README.md  install-skills.sh
.claude/skills/agent-spec-authoring/: SKILL.md
crates/spec-cli/: Cargo.toml
crates/spec-core/: Cargo.toml
crates/spec-gateway/: Cargo.toml
crates/spec-lint/: Cargo.toml
crates/spec-parser/: Cargo.toml
crates/spec-report/: Cargo.toml
crates/spec-verify/: Cargo.toml
docs/: index.html
skills/agent-spec-authoring/: SKILL.md
skills/agent-spec-estimate/: SKILL.md
skills/agent-spec-tool-first/: SKILL.md
src/spec_lint/: linters.rs  pipeline.rs
