[package]
name = "spec-core"
description = "Core types for agent-spec: AST, verdicts, verification reports"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[lints]
workspace = true
