[package]
name = "spec-parser"
description = "Parser for agent-spec .spec files (bilingual BDD DSL)"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
spec-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
