[package]
name = "spec-report"
description = "Report formatters for agent-spec: text, JSON, markdown output"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
spec-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
