[package]
name = "spec-verify"
description = "Verification engine for agent-spec: structural, boundary, test, AI layers"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
spec-core.workspace = true
spec-parser.workspace = true
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
